# onnxbert

./: .gitmodules  CMakeLists.txt  README.md  get_bert.py  model.cpp  onnxbert_mobile.sh
bert/: bert-tiny-uncased-config.json
